# Push-Notification-Server

./: .env.example  .gitignore  INSTALL.md  README.md  push-server.service  pyproject.toml
accounts/: backends.py  models.py  serializers.py  urls.py  views.py
config/: settings.py  urls.py
server/: models.py  serializers.py  urls.py  views.py
utils/: utils.py
