[tool.poetry]
name = "push-notification-server"
version = "0.1.0"
description = "This is an server I wrote for Gilasweb for server-side"
authors = ["Mehdi Radfar <81019265+funlifew@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mysqlclient = "^2.2.7"
django = "^5.2"
djangorestframework = "^3.16.0"
djangorestframework-simplejwt = "^5.5.0"
django-cors-headers = "^4.7.0"
python-decouple = "^3.8"
cryptography = "^44.0.2"
pywebpush = "^2.0.3"
py-vapid = "^1.9.2"
phonenumbers = "^9.0.3"
django-webpush = "^0.3.6"
kavenegar = "^1.1.2"
pillow = "^11.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
